Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- News Document have a flexible part to handle multiple links
- Added an input to enter comments when modifying a document and sending the
  comments to the event service.
Bug fixes:
~~~~~~~~~~
- fix #454: Invalid widget css class in edition. This css class was hardcoded in
  CPSUrlWidget.
- Modified the event document layout so that it uses the more powerful and
  accessible "Text Widget" instead of the "Rich Text Editor Widget".
- fix popup_rte size bug: now popup window is resizable
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- splitting macros in progress
- fix for #453 makes accessible JavaScript library
- Support for layout clusters in flexible type informations; used by
  calling doc.render(..., cluster='foo') (or renderEdit or others).